# Note-Taking-App

./: README.md  main.py  pyproject.toml
static/css/: main.css
static/js/: notepad.js  weather.js  weather_detailed.js  whiteboard.js
templates/: homepage.html  weather.html
